[package]

name = "hamelin"
version = "0.0.1"
description = "An implementation of Hamelin in Rust."
authors = ["Aaron Weiss <aaronweiss74@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/aatxe/hamelin.rs"
readme = "README.md"

[dependencies.mio]
git = "https://github.com/carllerche/mio"

[dependencies.nix]
nix = "*"

[dependencies.hyper]
hyper = "*"
optional = true

[dependencies.irc]
irc = "*"
optional = true
